fix folder icon shift

--- a/style.css
+++ b/style.css
@@ -200,8 +200,13 @@
     text-align: center;
 }
 
+
 .stcm_menu_button i {
     margin-right: 5px;
+}
+
+.stcm_folder_row .stcm_menu_button i {
+    margin-right: 0px;
 }
 
 .stcm_menu_button.red {
